Restore good parts from commit aea587313b (other files part of the commit have xdsi removed)