@@ -15,6 +15,7 @@
         <dependency>
             <groupId>gov.nist.toolkit</groupId>
             <artifactId>xds-exceptions</artifactId>
+
         </dependency>
         <dependency>
             <groupId>org.apache.ws.commons.axiom</groupId>
@@ -47,12 +48,6 @@
             <artifactId>groovy-all</artifactId>
             <version>${groovyVersion}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.codehaus.groovy</groupId>-->
-<!--            <artifactId>groovy-all</artifactId>-->
-<!--            <version>${groovyVersion}</version>-->
-<!--        </dependency>-->
-
         <dependency>
         	<groupId>org.apache.commons</groupId>
         	<artifactId>commons-lang3</artifactId>
@@ -95,6 +90,10 @@
                     <compilerId>groovy-eclipse-compiler</compilerId>
                     <!-- set verbose to be true if you want lots of uninteresting messages -->
                     <!-- <verbose>true</verbose> -->
+                    <source>8</source>
+                    <target>8</target>
+                    <compilerArgument>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED	--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</compilerArgument>
+
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -107,9 +106,6 @@
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-batch</artifactId>
                         <version>${groovy-eclipse-batch.version}</version>
-                        <!-- or choose a different compiler version -->
-                        <!-- <version>1.8.6-01</version> -->
-                        <!-- <version>1.7.10-06</version> -->
                     </dependency>
                 </dependencies>
             </plugin>
